Enrich exception from FormattableString#format